# for display continuity sake please use 2 spaces instead of tabs

2015-01-29 bertaz
  * fix #386: ExtractSelectedPartOfImage fails to work when extracting a part of ASC or FLT monoband raster.
  * fix #387: RasterImageLayer class seems not working anymore with JPG files, occasionally also with some PNG.
  * Some other bugs fixed in ExtractSelectePartOfImage
  * Some other bugs fixed in RasterImageIO
  
2015-01-27 ede
  * fix WMS auth access

2015-01-22 bertaz
  * Fixed a bug in WarpImageToFencePlugIn (extension for temporary
    output file wrong when input is not a TIFF file)
  * Drivers for esri ASCII and Floating Point grids: added capability to write
    asc and flt files. Some bugs fixed.
  * RasterImageIO: added a method to get the nodata value for a grid.

2015-01-21 Giuseppe Aruta
  * RASTER: Rearrenged Create Lattice and Create Polygon grid of
    Raster images in a submenu ("Vectorialize")
  * RASTER: Add Layer Statistics Plugin (on submenu "Statistics")

2015-01-21 Giuseppe Aruta
  * Upgraded Sextante PlugIn
  * Substituted ExportEnvelopeAsGeometryPlugIn Raster plugIn with
    more general ExportLayerableEnvelopeAsGeometryPlugIn 

2015-01-19 bertaz
  * TIFF rasters: replaced code for reading TIFF tags with
  * Apache Commons Imaging functions
  
2015-01-19 Giuseppe Aruta 
  * Add modified "palette" icon with semitransparency to Style plugins
  * New icons to copy and paste style plugins
  
2015-01-16 bertaz
  * TIFF rasters: added ability to read statistics saved as
  * GDAL_METADATA TIFF tag

2015_01_15 Giuseppe Aruta 
  * Extended "Zoom To Scale" PlugIn to any layerable
  * Add a "Style" plugin to WMS Layer dialog. 
    Currently only Visibility by scale is available
 
2015-01-15 bertaz
  * Fixed WarpImageToFence plug-in. Now the plug-in creates a new, warped, raster.
  
2015_01_15 Giuseppe Aruta 
  * Add on Layer menu "Export layer envelope as geometry" which 
    exports the envelope of any type of layer supported by OpenJUMP (Layer.class,